fix font size and autozoom on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -68,8 +68,10 @@
   }
 }
 
+input,
 input[type='text'],
 input[type='number'],
+input[type='password'],
 textarea {
   font-size: 1rem;
 }
